<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/username_box"
        android:hint="@string/parking_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/parking_box"
        android:layout_below="@id/username_box"
        android:hint="@string/namemanager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/manager_box"
        android:layout_below="@id/parking_box"
        android:hint="@string/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/phone_box"
        android:layout_below="@id/manager_box"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password1_box"
        android:layout_below="@id/phone_box"
        android:hint="@string/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reenter_box"
        android:layout_below="@id/password1_box"
        android:hint="@string/password_rbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>